레이아웃 수정, algolia 테마적용, 구글 애널리틱스 적용

--- a/src/assets/css/mainCss.css
+++ b/src/assets/css/mainCss.css
@@ -28,17 +28,16 @@ body
 }
 
 ul.categories__list li:before{
-    content: "⭕";
+    content: "> ";
     display: inline-block;
     vertical-align: middle;
-    padding: 0px 6px 6px 0px;
-    /* font-family: 'Black Han Sans', sans-serif; */
+    font-family: 'Black Han Sans', sans-serif;
 }
 
 ul.categories__list
 {
     list-style: none;
-    font-size: 15px;
+    font-size: 1em;
 }
 
 .categories__list-item-link
